--- a/reactjs/src/App.css
+++ b/reactjs/src/App.css
@@ -36,3 +36,50 @@
     transform: rotate(360deg);
   }
 }
+
+.timer-container{
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  display: flex;
+}
+
+.timer-display{
+  font-size: 5rem;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+button {
+  padding: 10px 20px;
+  margin: 3px;
+  font-size: 1rem;
+  cursor: pointer;
+  border: black 2px solid;
+  background-color: #ffffff;
+  border-radius: 5px;
+}
+
+.time-control{
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+  margin-top: 40px;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding: 5px 10px;
+}
+
+button:hover {
+  background-color: #f0f0f0;
+}
+
+button:active {
+  background-color: #ccc;
+}
+
+button:disabled {
+  background-color: #ddd;
+  cursor: not-allowed;
+}
