--- a/reactjs/src/App.css
+++ b/reactjs/src/App.css
@@ -61,14 +61,22 @@ button {
   border-radius: 5px;
 }
 
-.time-control{
+.timer-controls{
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  margin-top: 30px;
+}
+
+.control-button{
+  width: 5px;
+  height: 40px;
   font-size: 2rem;
   font-weight: bold;
-  margin-bottom: 10px;
-  margin-top: 40px;
-  margin-left: 30px;
-  margin-right: 30px;
-  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
 button:hover {
