--- a/reactjs/src/App.css
+++ b/reactjs/src/App.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
@@ -13,41 +19,27 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App h1 {
+  margin-top: 50px;
 }
 
 .timer-container{
   align-items: center;
   justify-content: center;
-  margin-top: 50px;
-  margin-bottom: 20px;
   display: flex;
+  margin: 0;
+  padding: 0;
 }
 
 .timer-display{
-  font-size: 5rem;
+  font-size: 8rem;
   font-weight: bold;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 15px;
 }
 
@@ -60,14 +52,14 @@ button {
   background-color: #ffffff;
   border-radius: 5px;
 }
-
+/* style the timer controls div*/
 .timer-controls{
   display: flex;
   flex-direction: column;
   margin-left: 20px;
-  margin-top: 30px;
+  margin-top: 60px;
 }
-
+/* style the timer controls + and -*/
 .control-button{
   width: 5px;
   height: 40px;
@@ -76,7 +68,6 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
 button:hover {
@@ -90,4 +81,29 @@ button:active {
 button:disabled {
   background-color: #ddd;
   cursor: not-allowed;
+}
+
+.spotify-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.playlist-selector{
+  padding: 15px;
+  border-radius: 10px;
+  text-align: center;
+  width: 150px;
+}
+
+/* style the dropdown */
+.playlist-selector select {
+  width: 100%;
+  padding: 8px;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: 2px solid black;
+  background: white;
+  cursor: pointer;
 }
