--- a/reactjs/src/App.css
+++ b/reactjs/src/App.css
@@ -1,9 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 .App {
   text-align: center;
 }
@@ -25,14 +19,13 @@
 
 .App h1 {
   margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .timer-container{
   align-items: center;
   justify-content: center;
   display: flex;
-  margin: 0;
-  padding: 0;
 }
 
 .timer-display{
