--- a/reactjs/src/App.css
+++ b/reactjs/src/App.css
@@ -1,9 +1,14 @@
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+body{
+  background-color: #ffe4e1;
+  
+}
 .App {
   text-align: center;
 }
@@ -21,11 +26,6 @@
 
 .App-link {
   color: #61dafb;
-}
-
-.App h1 {
-  margin-top: 50px;
-  margin-bottom: 50px;
 }
 
 .timer-container{
@@ -82,27 +82,3 @@ button:disabled {
   cursor: not-allowed;
 }
 
-.spotify-container{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 30px;
-}
-
-.playlist-selector{
-  padding: 15px;
-  border-radius: 10px;
-  text-align: center;
-  width: 150px;
-}
-
-/* style the dropdown */
-.playlist-selector select {
-  width: 100%;
-  padding: 8px;
-  font-size: 1rem;
-  border-radius: 5px;
-  border: 2px solid black;
-  background: white;
-  cursor: pointer;
-}
